[tool.poetry]
name = "sequence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.4"
dnspython = "^2.1.0"
num2words = "^0.5.10"
azuredlock = "^0.0.16"
colour = "^0.1.5"
enums = "^0.0.2"
mentions = "^0.1.3"
ping3 = "^2.7.0"
xintool = "^0.0.7"
asset = "^0.6.13"
aiohttp = "^3.7.4"
arrow = "^1.1.0"
gtts = "^2.2.2"
PyNaCl = "^1.4.0"
pyfiglet = "^0.8.post1"
spotify = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
